<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cart Calculator</string>
    <string name="title_activity_home">Home</string>
    <string name="label_about">About</string>
    <string name="label_add_item">Add item</string>
    <string name="label_clear_list">Clear</string>
    <string name="label_empty_list">Your shopping cart is empty.</string>
    <string name="label_name">Name</string>
    <string name="label_price">Price</string>
    <string name="label_plus_symbol">+</string>
    <string name="label_less_symbol">-</string>
    <string name="label_delete_item">Delete item</string>
    <string name="label_total">Total:</string>
    <string name="title_activity_add_item">Add new item</string>
    <string name="alert_dialog_about_content">
        Cart Calculator\n
        Simple, generic shopping cart manager and total due calculator.\n\n
        Copyright &#169; 2014 Thiago Baptista.\n\n
        Cart Calculator for Android is free software, distributed under the GNU General Public License version 3.\n\n
        For license information and bug reporting, please visit:\n
        http://thiagobaptista.github.com/cartcalculator-android.
    </string>
    <string name="title_contextmenu_cart_items">Cart item options</string>

</resources>
