<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:tools="http://schemas.android.com/tools" 
	android:layout_width="match_parent" 
	android:layout_height="match_parent" 
	android:orientation="vertical"
	tools:context="${packageName}.${activityClass}">
    
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/label_name"/>	
	<EditText
		android:id="@+id/edit_text_add_item_name"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:inputType="text"/>
	
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/label_price"/>	
	<EditText
		android:id="@+id/edit_text_add_item_price"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:inputType="numberDecimal"/>
	
	<Button 
        android:id="@+id/button_add_item_save" 
	    android:layout_height="wrap_content"
	    android:layout_width="match_parent"
	    android:text="@string/label_add_item" />
    
</LinearLayout>

