<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:baselineAligned="false" 
    style="@style/HomeLinearLayout" 
    tools:context="${packageName}.${activityClass}" >

    <ListView
        android:id="@+id/list_view_home_cart_items" 
        android:layout_weight="2" 
        android:padding="@dimen/standard_space" 
        style="@style/HomeLinearLayoutWeightedChild" />
    
    <LinearLayout 
        android:orientation="vertical" 
        android:layout_weight="1" 
        android:padding="@dimen/standard_space" 
        style="@style/HomeLinearLayoutWeightedChild">
        
	    <TextView 
            android:layout_width="match_parent" 
            android:layout_height="wrap_content" 
            android:gravity="center" 
            android:textSize="@dimen/textview_total_due_label_size" 
            android:text="@string/label_total" />
	    <TextView 
	        android:id="@+id/text_view_home_total_due" 
	        android:layout_width="match_parent" 
	        android:layout_height="wrap_content" 
	        android:gravity="center" 
	        android:textSize="@dimen/textview_total_due_value_size" />
	    
	    <Button 
	        android:id="@+id/button_home_add_item" 
		    android:layout_width="match_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/label_add_item" />
	    
	    <Button 
	        android:id="@+id/button_home_clear_list" 
		    android:layout_width="match_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/label_clear_list" />
	    
    </LinearLayout>

</LinearLayout>
